spacing issue

--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -77,6 +77,7 @@
     margin-left: auto;
     grid-column: 3;
     grid-row: 1;
+    width: 150px;
     justify-content: center;
     align-items: center;
   }
@@ -150,6 +151,7 @@
     justify-content: center;
     align-items: center;
     column-gap: 1em;
+    padding: 0em;
   }
 
   #smallmap {
