--- a/finalproject/css/medium.css
+++ b/finalproject/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 32.5em) {
+@media only screen and (min-width: 34em) {
   body {
     max-width: 100%;
   }
@@ -103,6 +103,7 @@
   .contactinfo {
     max-width: 90%;
     height: 300px;
+    padding: .5em;
   }
 
   .contact {
