--- a/finalproject/css/small.css
+++ b/finalproject/css/small.css
@@ -352,9 +352,9 @@ ul {
 }
 
 #socialiconsdivhome {
-  margin-right: 2em;
-  width: 150px;
-  margin-left: 2em;
+  margin-right: auto;
+  width: 270px;
+  margin-left: auto;
   text-align: center;
 }
 
@@ -362,6 +362,7 @@ ul {
   height: 270px;
   background-color: white;
   margin-bottom: 2rem;
+  padding-top: 2em;
 }
 
 #contactsectiontitle {
